<resources>
    <string name="app_name">WhatsApp</string>
    <string name="setting">MODs</string>
    <string name="more">More</string>
    <string name="priv">Privacy</string>
    <string name="newchat">New Chat</string>
    <string name="hseen">Hide Last Seen</string>
    <string name="hseensum">Pause your last seen and stop being shown online. \nNote\: You cannot see your contact\'s last seen.</string>
    <string name="bor">Blue Tick on Reply</string>
    <string name="borsum">Show sender that you read the message only after you reply. \nNote: You need to enable Hide Blue Tick first.</string>
    <string name="ar">Anti Revoke</string>
    <string name="arsum">Prevent a message/media from getting deleted and show it with a special indicator.</string>
    <string name="sar">Anti Revoke for Status</string>
    <string name="sarsum">Prevent a Status update from getting deleted ans show it with a special indicator.</string>
    <string name="hfwd">Hide Forwarded Tag</string>
    <string name="hfwdsum">Prevent a message/media from being shown as forwarded by you.</string>
    <string name="hstatus">Hide Status View</string>
    <string name="hstatussum">Don\'t tell your contact that you have seen their status.</string>
    <string name="hread">Hide Blue Tick</string>
    <string name="hreadsum">Don\'t tell the sender that you have read their message.</string>
    <string name="hreceipt">Hide Double Tick</string>
    <string name="hreceiptsum">Don\'t tell the sender that you have received their message.</string>
    <string name="hplay">Hide Play Icon</string>
    <string name="hplaysum">Don\'t tell the sender that you played their audio message.</string>
    <string name="htype">Hide Typing</string>
    <string name="htypesum">Don\'t tell the sender that you are typing a message.</string>
    <string name="hrec"> Hide Recording</string>
    <string name="hrecsum">Don\'t tell sender that you are recording an audio.</string>
    <string name="dview">Disable View Once</string>
    <string name="dviewsum">Prevent a View Once media file from disappearing after viewing.</string>
    <string name="resetp">Reset Privacy</string>
    <string name="resetpsum">Click to clear all privacy preferences and reset to default.</string>
    <string name="resett">All Privacy preferences are cleared now.</string>
    <string name="upds">Update to new version is successful.</string>
    <string name="cat_general">General</string>
    <string name="cat_contacts">Contacts</string>
    <string name="cat_Groups">Groups</string>
    <string name="cat_reset">Reset</string>

    <string name="status">Save this status</string>
    <string name="text">Status copied to clipboard</string>
    <string name="already">"Already saved!"</string>
    <string name="media">"Status media successfully saved as "</string>
    <string name="error">"Error accessing file: "</string>

    <string name="dndt">"Restart WhatsApp manually(Clear from recents and launch) for DND to work."</string>
    <string name="enint">Enable Internet</string>
    <string name="disint">Disable Internet</string>
    <string name="dndstatus">" - Internet is Disabled"</string>

    <string name="enternum">Enter Number</string>
    <string name="message">"Message!"</string>
    <string name="cancel">Cancel</string>

    <string name="nuf">"New Update Found!"</string>
    <string name="updatetext">"A new update has been released.\n Please press the Download button to download now."</string>
    <string name="dldnw">Download Now</string>
    <string name="utitleerr">"Error!"</string>
    <string name="umessageerr">"Connection to internet denied. Please check."</string>
</resources>
